idf_component_register(SRCS "recirculationBasicHydrophonics.c" constants.h xl9535.h xl9535.c pcf8575.h pcf8575.c state_functions.c state_functions.h state_machine.c state_machine.h
        state_functions_tower.c state_functions_tower.h state_machine_tower.c state_machine_tower.h wifi_manager.c wifi_manager.h mqtt_manager.h mqtt_manager.c flow_sensor.h flow_sensor.c
                    INCLUDE_DIRS ".")
